frontend/test/should_pass/boolean_array.gm
node class N
{
	b:boolean;
}