frontend/test/should_fail/method_model_inh_ovrrd_failxf2.gm
external class N
{
	external function foo(int) : int;
	external function qux(N) : string;
}

external class NN extends N
{	
	external function foo(boolean) : int;
	external function qux(NN) : boolean;
}
